Fix: Stretch background image vertically across container

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -13,7 +13,7 @@ html {
 }
 
 body {
-  background: url("../images/bg_blue.jpg") repeat fixed;
+  background: left / contain url("../images/bg_blue.jpg") repeat fixed;
 
   :focus {
     outline: none;
